apps/front/api-cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-cors
  namespace: goodfood-dev
spec:
  headers:
    accessControlAllowOriginList:
      - https://app.c-mbk.fr
      - http://app.c-mbk.fr
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - PATCH
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
      - X-Request-Id
    accessControlAllowCredentials: true
    accessControlMaxAge: 86400
